# Tracklinker-python-api

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
app/: main.py
app/controllers/: auth_controller.py  category_controller.py  dashboard_controller.py  output_details_controller.py  output_orders_controller.py  products_controller.py  reports_controller.py  subcategories_controller.py  suggestions_controller.py  suppliers_controller.py  user_controller.py  warranties_controller.py
app/core/: cache.py  celery_app.py  config.py  database.py  exception.py  mail.py  redis.py  security.py  token_blacklist.py
app/middlewares/: jwt_middleware.py  validate_request.py
app/models/: category_model.py  input_order_model.py  output_details_model.py  output_orders_model.py  product_brand_model.py  product_details_model.py  product_model.py  product_serial_model.py  suppliers_model.py  user_model.py  warranties_model.py
app/repository/: category_repository.py  dashboard_repository.py  input_orders_repository.py  output_details_repository.py  output_orders_repository.py  product_brands_repository.py  product_details_repository.py  product_models_repository.py  product_serials_repository.py  products_repository.py  subcategories_repository.py  suppliers_repository.py  user_repository.py  warranties_repository.py
app/routes/: auth_routes.py  category_routes.py  dashboard_routes.py  output_details_routes.py  outputs_routes.py  (+7 more)
database/: 01_database.sql  02_dml.sql  03_views.sql
(+125 files in other folders)
