[project]
name = "tracklinker-python-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "fastapi>=0.136.1",
    "fastapi-limiter==0.1.6",
    "fastapi-mail>=1.6.4",
    "mysql-connector-python>=9.7.0",
    "pip-audit>=2.10.0",
    "pydantic>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "uvicorn>=0.47.0",
]
